fixed the z-index of labels to not overlay the navigation

--- a/scss/modules/label.scss
+++ b/scss/modules/label.scss
@@ -11,7 +11,7 @@
     color: $white;
     padding-left: 55px;
     font-size: $smallFontSize;
-    z-index: 15000;
+    z-index: 200;
 
     strong {
         font-weight: bold;
